new look, all participants names added

--- a/index.html
+++ b/index.html
@@ -4,17 +4,24 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Party Task Game</title>
+    <title>The Quest</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="container">
-        <h1>Welcome to the Party Task Game!</h1>
-        <p>Enter your name to receive a random task!</p>
+        <h1>The Quest</h1>
+        <p>Three rules. 
+            <ol>
+                <li>Do not talk about the Quest.</li>
+                <li>Do not talk about the Quest.</li>
+                <li>Do not talk about the Quest.</li>
+            </ol>
+        </p>
         <input type="text" id="nameInput" placeholder="Your Name">
-        <button onclick="checkName()">Get Your Task</button>
+        <button onclick="checkName()">Get your Quest</button>
         <p id="taskResult"></p>
     </div>
     <script src="scripts.js"></script>
 </body>
+
 </html>
